Adjust styles & fix clicking on next/previous on small screens

--- a/packages/js-draw/src/toolbar/utils/HelpDisplay.scss
+++ b/packages/js-draw/src/toolbar/utils/HelpDisplay.scss
@@ -49,6 +49,7 @@
 
 	.with-text-shadow {
 		text-shadow: 0 0 3px rgba(20, 20, 20, 0.9);
+		filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.5));
 	}
 
 	button:not(:disabled) {
@@ -172,7 +173,7 @@
 				}
 			}
 
-			transition: 0.3s ease opacity, 0.3s ease background-color;
+			transition: 0.5s ease opacity, 0.5s ease background-color;
 		}
 	}
 
@@ -192,6 +193,7 @@
 			font-size: 1em;
 			padding: 10px;
 			transition: 0.2s ease font-size;
+			z-index: 3;
 
 			@media (prefers-reduced-motion: reduce) {
 				transition: none;
